recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: not found: value subTree
	subTree()
        ^